# youtube-subtitle-generate

./: Cargo.toml  README.md  input.example.txt
src/: channel.rs  main.rs  video.rs
src/subtitle/: mod.rs  post_processing.rs  pre_processing.rs  whisper.rs
